<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="cycle">Life cycle</string>
	<string name="frame">Frame activity</string>
	<string name="linear">Linear activity</string>
	<string name="relative">Relative activity</string>
	<string name="table">Table activity</string>
	<string name="reusable">Reusable activity</string>
	<string name="meta_data2">meta_data2</string>
	<string name="s_view_btn">more</string>
	<string name="big_text">
		伦敦最早是一个凯尔特人的城镇，由罗马入侵者于公元50年左右建立，作为泰晤士河畔的一个港口，并命名为Londinium。公元7世纪罗马帝国灭亡后，Londinium遭弃城，撒克逊人于今Aldwych以西1英里处建立了Lundenwic的城镇。直到公元9至10世纪罗马伦敦老城才再次恢复人烟。
		伦敦逐渐地发展、扩大，吸收了附近的村庄、聚居地方，向四面八方扩散。到17世纪时伦敦已经是当时大英帝国乃至欧洲最大的都市。1666年的伦敦大火灾毁坏了伦敦城内大部分的建筑（奇迹似的，死于这场大火的只有20多人），但大火后伦敦又立即开始了10年间的重建，包括圣保罗大教堂在内的标志性建筑都是在此期间开始动工的。
		维多利亚时代，伦敦经历了大规模的发展。世界上第一条地铁的开通，公共汽车的营运，以及联系四方的铁路线，使伦敦的市容与交通面貌一新。伦敦市区在19世纪后半期居住人口突降（1851年：128000人；1871年：75000人；1901年：27000人），大量新建的建筑使伦敦从一座乔治风貌的城市转而成为维多利亚特色的城市。
		伦敦最近100年来的大变化可说是始于第二次世界大战以后。大战期间，伦敦遭到纳粹德国空军的猛烈轰炸，期间超过3万的伦敦市民丧生，大部分建筑遭到破坏。1950年代至1970年代，由于伦敦的重建未经统一规划，造成今天建筑多样化的格局，并成为当今伦敦的独特之处。
		20世纪初，伦敦人大部分都使用煤作为家居燃料，产生大量烟雾。这些烟雾再加上伦敦气候，造成了伦敦「远近驰名」的烟霞，英语称为London
		Fog（伦敦雾）。因此，英语有时会把伦敦称作「大烟」（The
		Smoke），伦敦并由此得名“雾都”。1952年12月5日至9日期间，伦敦烟雾事件令4000人死亡，政府因而于1956年推行了《空气清净法案》，于伦敦部分地区禁止使用产生浓烟的燃料。时至今日，伦敦的空气质量已经得到明显改观。
		[编辑] 行政区划
		主条目：大伦敦
		大伦敦地区（Greater London）整体由大伦敦政府（Greater London
		Authority）负责规划和管理，另外与33个区政府分享地方行政权力。
		大伦敦政府由一个直选产生的伦敦市长（Mayor of
		London）领导，并由一个25人的伦敦市议会（London
		Assembly）监督。33个区政府由伦敦市法团（City of London
		Corporation）及伦敦自治市议会（London
		Borough Councils）管理。
		伦敦市法团属下有伦敦市（City of
		London）。伦敦自治市议会属下有32个伦敦自治市（London Boroughs）；其中西敏市（City of
		Westminster），自称为城市（City），泰晤士河畔京士顿区（Kingston upon
		Thames）及肯辛顿-切尔西区（Kensington and Chelsea），自称为皇家自治市（Royal
		Borough）；这只是名称上的分别，在行政上仍属于伦敦自治市，并没有特权。
		伦敦市和众自治市属于标准一级行政区——单一管理区（Unitary Authority）之一。
		虽然拥有同样的政治地位，但在实际行政上，伦敦市法团比其他伦敦自治市议会拥有更多的行政权力，例如拥有土地权及独立的警察团队。
		根据内伦敦教育局（Inner London Education
		Authority）定义，33个行政区中，靠近中心的12个被合称为内伦敦（Inner London），外围的20个合称为外伦敦（Outer
		London）。
    </string>
	<string name="crime_title_hint">Enter a title for this crime.</string>
	<string name="crime_title_label">Title</string> 
	<string name="crime_details_label">Details</string> 
	<string name="crime_solved_label">Solved?</string>
	<string name="date_picker_title">Date of crime:</string>
	<string name="crimes_title">Crimes</string>
	<string name="txt_save">Take</string>
	<color name="tab_title_normal_color">#262726</color>
    <color name="tab_title_pressed_color">#16982b</color>
    <color name="tab_middle_line_color">#5c882c</color>
    <string name="open_prompt_title">Open via</string>
    <string name="AcceleX">X方向上加速度：</string>
    <string name="AcceleY">Y方向上加速度：</string>
    <string name="AcceleZ">Z方向上加速度：</string>
    <string name="orientationX">X方向的角度：</string>
    <string name="orientationY">Y方向的角度：</string>
    <string name="orientationZ">Z方向的角度：</string>
    <string name="orientationA">手机头部指向：</string>
    <string name="orientationB">手机顶部或尾部翘起的角度：</string>
    <string name="orientationC">手机左侧或右侧翘起的角度：</string>
    <string name="MagneticX">X方向的磁场分量：</string>
    <string name="MagneticY">Y方向的磁场分量：</string>
    <string name="MagneticZ">Z方向的磁场分量：</string>
    <string name="GyroscopeX">沿X方向旋转角速度：</string>
    <string name="GyroscopeY">沿Y方向旋转角速度：</string>
    <string name="GyroscopeZ">沿Z方向旋转角速度：</string>
    <string name="Light">光线强度：</string>
    <string name="LightState">当前等效状态：</string>
    <string name="PressureTextViewX">周围空气压力：</string>
    <string name="TemperatureTextViewX">设备温度：</string>
    <string name="AmbientTemperatureTextViewX">环境温度：</string>
    <string name="ProximityTextViewX">设备与对象间距离：</string>
    <string name="GravityX">沿X方向重力加速度：</string>
    <string name="GravityY">沿Y方向重力加速度：</string>
    <string name="GravityZ">沿Z方向重力加速度：</string>
    <string name="LinearAccelerometerX">沿X方向线性加速度：</string>
    <string name="LinearAccelerometerY">沿Y方向线性加速度：</string>
    <string name="LinearAccelerometerZ">沿Z方向线性加速度：</string>
    <string name="RotationX">沿X方向旋转矢量：</string>
    <string name="RotationY">沿Y方向旋转矢量：</string>
    <string name="RotationZ">沿Z方向旋转矢量：</string>
    <string name="s1">SYSTEM_UI_FLAG_VISIBLE</string>  
    <string name="s2">INVISIBLE</string>  
    <string name="s3">SYSTEM_UI_FLAG_FULLSCREEN</string>  
    <string name="s4">SYSTEM_UI_FLAG_LAYOUT_FULLSCREEN</string>  
    <string name="s5">SYSTEM_UI_FLAG_LAYOUT_HIDE_NAVIGATION</string>  
    <string name="s6">SYSTEM_UI_LAYOUT_FLAGS</string>  
    <string name="s7">SYSTEM_UI_FLAG_HIDE_NAVIGATION</string>  
    <string name="s8">SYSTEM_UI_FLAG_LOW_PROFILE</string>  
    <string name="GetAppName">get_app_name</string>
    <string name="GetAppVersionName">get_app_version name</string>
    <string name="Serializable">Serializable</string>
    <string name="Unserializable">Unserializable</string>
</resources>
