<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ButtonActivity" >

    <Button
        android:id="@+id/btn_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle" />
    
	<Button
	    android:id="@+id/btn_frame"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/btn_cycle"
	    android:text="@string/frame"/>
	
	<Button
	    android:id="@+id/btn_linear"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/btn_frame"
	    android:text="@string/linear"/>
	
	<Button
	    android:id="@+id/btn_relative"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/btn_linear"
	    android:text="@string/relative"/>
	
	<Button
	    android:id="@+id/btn_table"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/btn_relative"
	    android:text="@string/table"/>
	
	<Button
	    android:id="@+id/btn_reusable"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/btn_table"
	    android:text="@string/reusable"/>

</RelativeLayout>
